@@ -64,9 +64,16 @@ General {
 	HashLimit 65535
 
 	#
-	# Logfile
+	# Logfile: on, off, or a filename
+	# Default: on (/var/log/conntrackd.log)
 	#
-	LogFile /var/log/conntrackd.log
+	#LogFile off
+
+	#
+	# Syslog: on, off or a facility name (daemon (default) or local0..7)
+	# Default: off
+	#
+	#Syslog on
 
 	#
 	# Lockfile
