@@ -77,7 +77,7 @@ retry:
 			debug_ct(ct, "can't destroy");
 		break;
 	default:
-		dlog(STATE(log), "mcast received unknown query %d\n", query);
+		dlog(STATE(log), LOG_ERR, "mcast unknown query %d\n", query);
 		break;
 	}
 }
@@ -97,7 +97,7 @@ static void mcast_handler()
 		struct nethdr *net = (struct nethdr *) ptr;
 
 		if (ntohs(net->len) > remain) {
-			dlog(STATE(log), "fragmented messages");
+			dlog(STATE(log), LOG_ERR, "fragmented messages");
 			break;
 		}
 
@@ -121,7 +121,7 @@ static int init_sync(void)
 
 	state.sync = malloc(sizeof(struct ct_sync_state));
 	if (!state.sync) {
-		dlog(STATE(log), "[FAIL] can't allocate memory for state sync");
+		dlog(STATE(log), LOG_ERR, "can't allocate memory for sync");
 		return -1;
 	}
 	memset(state.sync, 0, sizeof(struct ct_sync_state));
@@ -142,8 +142,8 @@ static int init_sync(void)
 			     STATE_SYNC(sync)->internal_cache_extra);
 
 	if (!STATE_SYNC(internal)) {
-		dlog(STATE(log), "[FAIL] can't allocate memory for "
-				 "the internal cache");
+		dlog(STATE(log), LOG_ERR, "can't allocate memory for "
+					  "the internal cache");
 		return -1;
 	}
 
@@ -154,27 +154,27 @@ static int init_sync(void)
 			     NULL);
 
 	if (!STATE_SYNC(external)) {
-		dlog(STATE(log), "[FAIL] can't allocate memory for the "
-				 "external cache");
+		dlog(STATE(log), LOG_ERR, "can't allocate memory for the "
+					  "external cache");
 		return -1;
 	}
 
 	/* multicast server to receive events from the wire */
 	STATE_SYNC(mcast_server) = mcast_server_create(&CONFIG(mcast));
 	if (STATE_SYNC(mcast_server) == NULL) {
-		dlog(STATE(log), "[FAIL] can't open multicast server!");
+		dlog(STATE(log), LOG_ERR, "can't open multicast server!");
 		return -1;
 	}
 
 	/* multicast client to send events on the wire */
 	STATE_SYNC(mcast_client) = mcast_client_create(&CONFIG(mcast));
 	if (STATE_SYNC(mcast_client) == NULL) {
-		dlog(STATE(log), "[FAIL] can't open client multicast socket!");
+		dlog(STATE(log), LOG_ERR, "can't open client multicast socket");
 		return -1;
 	}
 
 	if (mcast_buffered_init(&CONFIG(mcast)) == -1) {
-		dlog(STATE(log), "[FAIL] can't init tx buffer!");
+		dlog(STATE(log), LOG_ERR, "can't init tx buffer!");
 		return -1;
 	}
 
@@ -269,13 +269,13 @@ static int local_handler_sync(int fd, int type, void *data)
 	case COMMIT:
 		ret = fork();
 		if (ret == 0) {
-			dlog(STATE(log), "[REQ] committing external cache");
+			dlog(STATE(log), LOG_INFO, "committing external cache");
 			cache_commit(STATE_SYNC(external));
 			exit(EXIT_SUCCESS);
 		}
 		break;
 	case FLUSH_CACHE:
-		dlog(STATE(log), "[REQ] flushing caches");
+		dlog(STATE(log), LOG_INFO, "flushing caches");
 		cache_flush(STATE_SYNC(internal));
 		cache_flush(STATE_SYNC(external));
 		break;
@@ -398,7 +398,7 @@ static void overrun_sync()
 
 	h = nfct_open(CONNTRACK, 0);
 	if (!h) {
-		dlog(STATE(log), "can't open overrun handler");
+		dlog(STATE(log), LOG_ERR, "can't open overrun handler");
 		return;
 	}
 
@@ -406,7 +406,8 @@ static void overrun_sync()
 
 	ret = nfct_query(h, NFCT_Q_DUMP, &family);
 	if (ret == -1)
-		dlog(STATE(log), "overrun query error %s", strerror(errno));
+		dlog(STATE(log), LOG_ERR, 
+		     "overrun query error %s", strerror(errno));
 
 	nfct_callback_unregister(h);
 
@@ -436,8 +437,8 @@ retry:
 			goto retry;
 		}
 
-		dlog(STATE(log), "can't add to internal cache: "
-				      "%s\n", strerror(errno));
+		dlog(STATE(log), LOG_ERR, "can't add to internal cache: "
+				      	  "%s\n", strerror(errno));
 		debug_ct(ct, "can't add");
 	}
 }
